Fixed config file

--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
     "Token": "token",
     "Url": "https://url-of-your-server",
-    "Port": "port-of-your-server",
+    "Port": "8443",
     "MaxBotConns": 10,
     "ChansPerUser": 10,
-    "CertFile": "use certgen.sh",
-    "KeyFile": "use certgen.sh",
-    "RedisUrl": "localhost:port",
-    "MlServers": ["https://url-of-ml-server"],
+    "CertFile": "certs/cert.pem",
+    "KeyFile": "certs/key.pem",
+    "RedisUrl": "localhost:6379",
+    "MlServers": ["url-of-ml-server"],
     "SqlUser": "root",
-    "SqlPass": "toor",
+    "SqlPass": "pass",
     "MaxSqlConns": 10,
     "MaxSqlIdleConns": 5,
     "AdminChatID": 0
